Php-project_TechnologyBlog-main/k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: php-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: mysql
          image: an11113/database:latest
          volumeMounts:
            - name: sql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: sql-storage
          persistentVolumeClaim:
            claimName: sql-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: php-app
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30006
  selector:
    app: database
